Fix styling for start activity button on mobile and desktop view

--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,6 @@ form {
   display: grid;
   grid-template-columns: 3fr 1fr 3fr;
   grid-template-rows: repeat(3, auto);
-  justify-content: space-between;
 }
 
 label {
@@ -243,10 +242,9 @@ input {
   width: 80%;
 }
 
-.btn-start {
-display: grid;
-grid-template-columns: 2fr 2fr 2fr;
-padding: 10px 0;
+.start-button-styling {
+  grid-row: 3;
+  grid-column: 3;
 }
 
 /*~~~~~~Media Queries~~~~~~~~~~~~*/
@@ -290,10 +288,9 @@ padding: 10px 0;
     justify-content: center;
   }
 
-  .btn-start {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0;
+  .start-button-styling {
+    grid-column: 1 / -1;
+    padding-left: 15%;
   }
 
 }
@@ -311,12 +308,6 @@ padding: 10px 0;
     border-left: none;
     border-color: #46424D;
     padding: 2%;
-  }
-
-  .btn-start {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0;
   }
 }
 
